--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,3 +1,67 @@
 .sign_form {
     margin: 50px 0px;
 }
+
+.dashboard {
+    background: none repeat scroll 0 0 #1d2939;
+    color: #636e7b;
+    font-family: "LatoRegular","Lucida Grande","Lucida Sans Unicode",Helvetica,sans-serif !important;
+    line-height: 21px;
+}
+.leftpanel {
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 240px;
+    z-index: 100;
+}
+
+.mainpanel {
+    background: none repeat scroll 0 0 #e4e7ea;
+    margin-left: 240px;
+    min-height: 1000px;
+}
+.logopanel {
+    background: none repeat scroll 0 0 #fff;
+    padding: 10px;
+}
+
+.header h1 {
+    color: #1d2939;
+    font-family: "LatoBold","Lucida Grande","Lucida Sans Unicode",Helvetica,sans-serif;
+    font-size: 30px;
+    letter-spacing: -1.5px;
+    line-height: 30px;
+    margin: 0;
+}
+
+.header h1 span {
+    color: #1caf9a;
+}
+
+.headerbar {
+    background: none repeat scroll 0 0 #fff;
+    border-left: 1px solid #eee;
+}
+
+.headermenu {
+    list-style: outside none none;
+    margin: 0;
+    padding: 0;
+}
+
+.headermenu::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+.headermenu > li {
+    border-left: 1px solid #eee;
+    display: inline-block;
+    float: left;
+    position: relative;
+}
+
+.leftpanelinner {
+    padding: 5px 15px;
+}
