--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -84,6 +84,10 @@ body {
 //     }
 // }
 
+.page-right {
+    padding-top: 76px;
+}
+
 .form-horizontal {
     .control-hint {
         margin-bottom: 0;
